[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mispsk"
version = "0.4.0"
description = "MISP Script Kit"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "HalfTimeOfLife" }]
requires-python = ">=3.10"
dependencies = [
    "pymisp>=2.4.180",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
]

[tool.setuptools]
packages = ["mispsk"]
